--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     /* box-sizing:border-box; */
 }
 :root{
-    --bcol: rgba(255, 255, 255, 0.849);
+    --bcol: whitesmoke;
+    --checkboxcol1:#d8d8d8;
+    --checkboxcol2:#cccccc;
 }
 .container{
     background-color: var(--bcol);
@@ -37,8 +39,11 @@
     display: flex;
     justify-content: center;
     align-items:center;
-    animation: slide 1s linear 0;
-    animation-duration: 1000ms;
+    /* animation: slide 3s linear 0; */
+    animation-name: slide;
+    animation-timing-function: linear;
+    animation-duration: 1s;
+    animation-iteration-count: 0;
     animation-delay:0ms;
     animation-fill-mode: forwards;
     animation-direction:alternate;
@@ -62,3 +67,45 @@
     }
 }
 
+#changer{
+    position: absolute;
+    top:50%;
+    right:15%;
+    height:9rem;
+    width:3rem;
+    /* background-color: black; */
+    transform:translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.small{
+    height:1.4rem;
+    width:1.4rem;
+    border-radius: 50%;
+    /* background-color: #a5a5a5; */
+    background-color: #a5a5a5;
+    margin:0.8rem 0;
+    box-shadow: inset 0 0px 8px #717171;
+    border-top:1.45px solid white;
+    border-bottom:1.4px solid white;
+}
+#one.active{
+    background-color: #00d22d;
+    box-shadow: inset 0 0px 8px green;
+}
+#two.active{
+    background-color: #00d22d;
+    box-shadow: inset 0 0px 8px green;
+}
+@media only screen and (max-width: 700px){
+    #changer{
+        flex-direction: row;
+        top:40%;
+        left:50%;
+        transform: translate(-40%, -50%);
+    }
+    .small{
+        margin:0 1rem;
+    }
+}
